[package]
name = "goons_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = { version = "1.0.2", features = ["ws", "rustls"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
slack-morphism = { version = "1.10", features = ["hyper", "axum"] }
