[package]
name = "glizzy"
version = "0.1.0"
edition = "2021"
authors = ["Crypdough.eth"]
description = "Monitors an Ethereum account and notifies slack when the balance of the EOA is too low to pay gas fees for users."
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = { version = "1.0.2", features = ["rustls"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
slack-morphism = { version = "1.10", features = ["hyper", "axum"] }
clap = { version = "4.2.5", features = ["derive"] }
